--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -1,14 +1,26 @@
-<h1>It's My Birthday!</h1>
-<h2>On the 4th October</h2>
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="Brithday cake"/>
-<h2>What to bring</h2>
-<ul>
-    <h3>
-    <li>Money, I am not paying for all of you.</li>
-    <li>A gift would be nice</li>
-    <li>Your company would be appriacted</li>
-</h3></ul>
-<h2>
-<a href="https://www.google.com/maps/@-26.7243679,27.8555178,3a,75y,348.25h,84.99t/data=!3m6!1e1!3m4!1sqlr1UN3vCDD_0TWOJGEnCQ!2e0!7i16384!8i8192?entry=ttu">Where you need to go</a></h2><br />
-
-<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">this is quite something else though</a>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Birthday project</title>
+  </head>
+  <body>
+    <h1>It's My Birthday!</h1>
+    <h2>On the 4th October</h2>
+    <img
+      src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
+      alt="birhday cake image"
+    />
+    <h3>What to bring:</h3>
+    <ul>
+      <li>Yourself</li>
+      <li>Your own transport</li>
+    </ul>
+    <h3>This is where we will meet:</h3>
+    <a
+      href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656"
+      >Google map link</a
+    >
+  </body>
+</html>
