--- a/index.html
+++ b/index.html
@@ -1,34 +1,24 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Almero's portfolio</title>
-</head>
-<body>
-    <h1>Almero Jansen van Vuuren's Portfolio</h1>
-    <h2>I am trying to be a full stack developer</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HTML Portfolio</title>
+  </head>
+  <body>
+    <h1>Almero's HTML Portfolio</h1>
+    <h2>I'm a Web Developer</h2>
     <hr />
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie-ranking-my-project.png" alt="An example of my Movies ranking project"/>
-    <h3><a href ="./public/birthday-invite.html">Birthdat Invite Project</a></h3>
-    <img src="./assets/images/Birthday-my-project.PNG" alt="An example of Birthday invite project"/> 
+    <h3><a href="./public/series-ranking.html">Series ranking</a></h3>
+    <img src="./assets/images/movie-ranking.png" alt="" />
+    <h3><a href="./public/birthday-invite.html">Birthday invite project</a></h3>
+    <img src="./assets/images/birthday-invite.png" alt="" />
     <hr />
-    <a href ="public/contact.html">How to contact me</a>
-    <a href="./public/about.html">This still needs to be filled in</a>
-</body>
+    <h4>
+      <p>
+        <a href="./public/about.html">About Me</a>
+        <a href="./public/contact.html">Contact Me</a>
+      </p>
+    </h4>
+  </body>
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
