--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,10 +1,28 @@
-<!-- Write your code below -->
-<h1>The Best Movies according to Almero</h1>
-<h2>My top 3 Movies</h2>
-<hr />
-<h3>Tron Legacy</h3>
-<p>Tron Legacy is a very well done film. The music,story and visuals are astounding</p>
-<h3>Spider-man Across the Spider verse </h3>
-<p>The story is amazing and the style of the art/visuals are just breath taking </p>
-<h3>John Wick series</h3>
-<p>The movie series has a lot of action with an interresting story and world to complement it.</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Series Ranking Website</title>
+  </head>
+  <body>
+    <h1>The Best Movies According to Almero</h1>
+    <h2>My top 3 Series of all-time.</h2>
+    <hr />
+    <h3>MR.ROBOT</h3>
+    <p>
+      Great series that has a lot of twist and turns, great characters and one
+      of the best series ever created.
+    </p>
+    <h3>Breaking bad</h3>
+    <p>
+      Great series that has a lot of twist and turns, great characters with very
+      compelling story arcs and one of the best series ever created.
+    </p>
+    <h3>Band of Brothers</h3>
+    <p>
+      A WW2 series that follows Easy company during the war and a bit of the
+      aftermath of the war. It shows how brutal the war really was.
+    </p>
+  </body>
+</html>
