--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Almero's HTML Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr />
-    <h3><a href="./public/series-ranking.html">Series ranking</a></h3>
-    <img src="./assets/images/movie-ranking.png" alt="" />
+    <h3><a href="./public/movie-ranking.html">Series ranking</a></h3>
+    <img src="./assets/images/series-ranking.png" alt="" />
     <h3><a href="./public/birthday-invite.html">Birthday invite project</a></h3>
     <img src="./assets/images/birthday-invite.png" alt="" />
     <hr />
